--- a/navbar.css
+++ b/navbar.css
@@ -1,15 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .main_nav {
-  @apply flex justify-between items-center h-16 px-16 text-lg [&>*]:flex;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+  width: 100%;
+  padding: 0 4rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  box-shadow: 0 4px 10px -2px rgba(0, 0, 0, 0.151);
 }
 
 .login_btn {
-  @apply h-10 flex justify-center items-center px-6 rounded-[2rem] ease-in-out duration-200 border-2 border-paste;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1.5rem;
+  border-radius: 2rem;
+  transition: all 0.2s ease-in-out;
+  border: 2px solid #17403d;
 }
 
 #login_btn_1 {
@@ -33,16 +44,31 @@
     color: #17403d;
   }
 }
+
+.login_btn_parent {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 0.35rem;
+}
+
 .login_btn_parent:has(#login_btn_2:hover) #login_btn_1 {
   background-color: #17403d;
   color: #fff;
 }
 
 .nav_links {
-  @apply gap-6 items-center text-paste;
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+  list-style-type: none;
 }
 
-.nav_links > *:not(:first-child) {
+.nav_links a {
+  color: #17403d;
+}
+
+.nav_links > *:not(:nth-child(1)):not(:nth-child(2)) {
   position: relative;
 
   &:hover::after {
@@ -66,61 +92,111 @@
 }
 
 .web_logo {
-  @apply font-faculty text-3xl;
+  font-family: "Faculty Glyphic", sans-serif;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .logo_das {
-  @apply bg-black h-[2px] w-10 rounded mx-2;
+  background-color: #17403d;
+  height: 2px;
+  width: 2.5rem;
+  border-radius: 0.25rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.menu_wraper {
+  height: 100%;
+  display: none;
+  align-items: center;
+  position: relative;
+}
+
+#sidebar_link {
+  visibility: hidden;
+  position: absolute;
+}
+
+#menu_icon {
+  display: flex;
+  align-items: center;
+  color: #17403d;
 }
 
 @media (max-width: 1170px) {
   .main_nav {
-    @apply px-10;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 }
 
 @media (max-width: 1110px) {
   .main_nav {
-    @apply px-8;
+    padding: 0 2rem;
   }
 
   .logo_das {
-    @apply mx-0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 1080px) {
   .web_logo {
-    @apply text-[1.68rem]/[2rem];
+    font-size: 1.68rem /* 26.88px */;
+    line-height: 2rem /* 32px */;
   }
 
   .nav_links > *:not(:first-child) {
-    @apply text-[1.05rem]/[1.5rem];
+    font-size: 1.05rem /* 16.8px */;
+    line-height: 1.5rem /* 24px */;
   }
 
   .login_btn {
-    @apply px-4;
+    padding-left: 1rem /* 16px */;
+    padding-right: 1rem /* 16px */;
   }
 }
 
 @media (max-width: 1010px) {
   .logo_das {
-    @apply h-0 w-0;
+    width: 1.5rem /* 24px */;
   }
 
   .web_logo {
-    @apply text-[1.4rem]/[1.5rem];
+    font-size: 1.4rem /* 22.4px */;
+    line-height: 1.5rem /* 24px */;
   }
 
   .nav_links {
-    @apply gap-5;
+    gap: 1.25rem /* 20px */;
   }
 
   .nav_links > *:not(:first-child) {
-    @apply text-[1rem]/[1.3rem];
+    font-size: 1rem /* 16px */;
+    line-height: 1.3rem /* 20.8px */;
   }
 
   .login_btn {
-    @apply px-4 text-[1rem]/[1.3rem];
+    font-size: 1rem /* 16px */;
+    line-height: 1.3rem /* 20.8px */;
+    padding: 0 1rem;
+  }
+}
+
+@media (max-width: 890px) {
+  .menu_wraper {
+    display: flex;
+  }
+
+  .nav_links > *:not(:first-child) {
+    display: none;
+  }
+  .main_nav {
+  }
+
+  .login_btn {
+    display: none;
   }
 }
