--- a/parsonal_part.css
+++ b/parsonal_part.css
@@ -1,15 +1,69 @@
+.hero_wraper2 {
+  margin-top: 0;
+}
+
+.colab {
+  width: 100%;
+  height: max-content;
+  margin: 4rem 0;
+}
+
+.colab__ul {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.colab__ul--style {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  list-style-type: none;
+}
+
+.colab__ul__item {
+  height: 100%;
+  flex: 1;
+  min-width: 250px;
+  border-left: 1px solid black;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: brightness(0%);
+}
+
+.colab__ul__item1--style {
+  border-left: none;
+  background-image: url(./img/colab__ul__item1.webp);
+  background-size: 300px;
+}
+
+.colab__ul__item2--style {
+  background-image: url(./img/colab__ul__item2.webp);
+  background-size: 200px 180px;
+}
+
+.colab__ul__item3--style {
+  background-image: url(./img/colab__ul__item3.webp);
+  background-size: 170px 60px;
+}
+
+.colab__ul__item4--style {
+  background-image: url(./img/colab__ul__item4.webp);
+  background-size: 170px 60px;
+}
+
+.colab__ul__item5--style {
+  background-image: url(./img/colab__ul__item5.webp);
+  background-size: 210px;
+}
+
 .hero_text2 {
   margin-right: 0;
   margin-left: 2rem;
 }
 
-@media (max-width: 1050px) {
-  .hero_text2 {
-    margin-left: 0;
-  }
-}
-
 .personal_img_container {
+  margin-top: 1rem;
   height: 560px;
   min-width: 520px;
   max-width: 620px;
@@ -18,25 +72,52 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  clip-path: polygon(
+    100% 0,
+    100% 47%,
+    95% 50%,
+    100% 53%,
+    100% 100%,
+    0 100%,
+    0 53%,
+    5% 50%,
+    0 47%,
+    0 0
+  );
 }
 
 @media (max-width: 1050px) {
-    .hero_wraper2 {
-        margin-top: 0;
-        width: 100%;
-        padding: 0 5%;
-        background-image: url(./img/woman-bg.webp);
-        background-size: cover;
-        background-repeat: no-repeat;
-        position: relative;
-    
-        &::after {
-          content: "";
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background: rgba(0, 0, 0, 0.37); /* Semi-transparent overlay */
-        }
+  .hero_text2 {
+    margin-left: 0;
+  }
+
+  .hero_wraper2 {
+    margin-top: 0;
+    width: 100%;
+    padding: 0 5%;
+    background-image: url(./img/woman-bg.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.37); /* Semi-transparent overlay */
+    }
+  }
 }
+
+/* @media (max-width: 1240px) {
+
+} */
+
+/* @media (max-width: 1400px) {
+  .colab__ul {
+    height: 50px;
+  }
+} */
