--- a/parsonal_part.css
+++ b/parsonal_part.css
@@ -5,7 +5,7 @@
 .colab {
   width: 100%;
   height: max-content;
-  margin: 4rem 0;
+  margin: 2rem 0;
 }
 
 .colab__ul {
@@ -13,6 +13,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .colab__ul--style {
