--- a/parsonal_part.css
+++ b/parsonal_part.css
@@ -5,7 +5,7 @@
 .colab {
   width: 100%;
   height: max-content;
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 .colab__ul {
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   overflow: hidden;
+  position: relative;
 }
 
 .colab__ul--style {
@@ -29,33 +30,39 @@
   border-left: 1px solid black;
   background-repeat: no-repeat;
   background-position: center;
-  filter: brightness(0%);
+  background-size: cover;
+  position: absolute;
+  left: 100%;
+  animation: autoRun 10s linear infinite;
 }
 
+@keyframes autoRun {
+  from {
+    left: 100%;
+  }
+  to {
+    left: -250px;
+  }
+}
 .colab__ul__item1--style {
   border-left: none;
-  background-image: url(./img/colab__ul__item1.webp);
-  background-size: 300px;
+  background-image: url(./img/item1.webp);
 }
 
 .colab__ul__item2--style {
-  background-image: url(./img/colab__ul__item2.webp);
-  background-size: 200px 180px;
+  background-image: url(./img/item2.webp);
 }
 
 .colab__ul__item3--style {
-  background-image: url(./img/colab__ul__item3.webp);
-  background-size: 170px 60px;
+  background-image: url(./img/item3.webp);
 }
 
 .colab__ul__item4--style {
-  background-image: url(./img/colab__ul__item4.webp);
-  background-size: 170px 60px;
+  background-image: url(./img/item4.webp);
 }
 
 .colab__ul__item5--style {
-  background-image: url(./img/colab__ul__item5.webp);
-  background-size: 210px;
+  background-image: url(./img/item5.webp);
 }
 
 .hero_text2 {
@@ -108,8 +115,17 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.37); /* Semi-transparent overlay */
+      background: rgb(255, 255, 255);
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(0, 0, 0, 0.3085609243697479) 10%
+      );
     }
+  }
+
+  .colab__ul {
+    height: 50px;
   }
 }
 
