--- a/parsonal_part.css
+++ b/parsonal_part.css
@@ -14,7 +14,6 @@
   display: flex;
   justify-content: center;
   overflow: hidden;
-  position: relative;
 }
 
 .colab__ul--style {
@@ -26,24 +25,12 @@
 .colab__ul__item {
   height: 100%;
   flex: 1;
-  min-width: 250px;
   border-left: 1px solid black;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position: absolute;
-  left: 100%;
-  animation: autoRun 10s linear infinite;
 }
 
-@keyframes autoRun {
-  from {
-    left: 100%;
-  }
-  to {
-    left: -250px;
-  }
-}
 .colab__ul__item1--style {
   border-left: none;
   background-image: url(./img/item1.webp);
@@ -94,6 +81,10 @@
   );
 }
 
+.colab_mobile {
+  display: none;
+}
+
 @media (max-width: 1050px) {
   .hero_text2 {
     margin-left: 0;
@@ -126,6 +117,91 @@
 
   .colab__ul {
     height: 50px;
+  }
+}
+
+@media (max-width: 850px) {
+  .colab__ul__item {
+    background-size: 200px;
+  }
+  .colab__ul__item1--style {
+    flex: 1.3;
+  }
+}
+
+@media (max-width: 640px) {
+  .colab__ul__item {
+    background-size: 150px;
+  }
+
+  .colab__ul {
+    height: 40px;
+  }
+}
+
+@media (max-width: 500px) {
+  .colab {
+    display: none;
+  }
+
+  .colab_mobile {
+    width: 100%;
+    display: block;
+  }
+
+  .colab_mobile__ul1 {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    display: flex;
+  }
+
+  .colab_mobile__ul1--style2 {
+    border-top: none;
+  }
+
+  .colab_mobile__item {
+    list-style-type: none;
+    width: 200px;
+    height: 100%;
+    flex: 1;
+    border-left: 1px solid black;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 180px;
+  }
+
+  .colab_mobile--item1 {
+    border-left: none;
+    background-image: url(./img/item5.webp);
+    background-size: 150px 180px;
+  }
+
+  .colab_mobile--item2 {
+    background-image: url(./img/item2.webp);
+  }
+
+  .colab_mobile--item3 {
+    background-image: url(./img/item3.webp);
+  }
+
+  .colab_mobile--item4 {
+    border-left: none;
+    background-image: url(./img/item4.webp);
+  }
+
+  .colab_mobile--item5 {
+    background-image: url(./img/item1.webp);
+  }
+}
+
+@media (max-width: 280px) {
+  .colab_mobile {
+    display: none;
   }
 }
 
