--- a/parsonal_part.css
+++ b/parsonal_part.css
@@ -2,7 +2,7 @@
   margin-top: 0;
   background-color: #dee4e43d;
   padding-top: 1rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 4.5rem;
 }
 
 .colab {
@@ -62,6 +62,7 @@
 
 .personal_img_container {
   margin-top: 1rem;
+  width: 100%;
   height: 560px;
   min-width: 520px;
   max-width: 620px;
