--- a/parsonal_part.css
+++ b/parsonal_part.css
@@ -1,4 +1,4 @@
-.hero_wraper2 {
+.hero_wrapper2 {
   margin-top: 0;
   background-color: #dee4e43d;
   padding-top: 1rem;
@@ -94,7 +94,7 @@
     margin-left: 0;
   }
 
-  .hero_wraper2 {
+  .hero_wrapper2 {
     margin-top: 0;
     width: 100%;
     padding: 0 5%;
