--- a/hero.css
+++ b/hero.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-.hero_wraper {
+.hero_wrapper {
   height: max-content;
   width: 100%;
   padding: 0 7rem;
@@ -200,13 +200,13 @@
 }
 
 @media (min-width: 1945px) {
-  .hero_wraper {
+  .hero_wrapper {
     justify-content: center;
   }
 }
 
 @media (max-width: 1130px) {
-  .hero_wraper {
+  .hero_wrapper {
     justify-content: center;
   }
 }
@@ -216,7 +216,7 @@
     display: none;
   }
 
-  .hero_wraper {
+  .hero_wrapper {
     margin-top: 0;
     width: 100%;
     padding: 0 5%;
@@ -254,7 +254,7 @@
 }
 
 @media (max-width: 890px) {
-  .hero_wraper {
+  .hero_wrapper {
     background-image: url(./img/card1.webp);
     background-size: cover;
     background-position: center;
